--- a/src/VSCode/project.json
+++ b/src/VSCode/project.json
@@ -4,7 +4,7 @@
     "description": "A VS Code language server implemention for .NET/.NET Core.",
     "version": "1.0.0-alpha1",
     "dependencies": {
-        "Newtonsoft.Json": "8.0.4-beta1"
+        "Newtonsoft.Json": "9.0.1"
     },
     "frameworks": {
         "net45": {
@@ -19,18 +19,18 @@
             "dependencies": {
             }
         },
-        "netstandard1.5": {
-            "imports": "dnxcore50",
+        "netstandard1.6": {
             "dependencies": {
-                "NETStandard.Library": "1.5.0-rc2-24027",
-                "System.Diagnostics.TraceSource": "4.0.0-rc2-24027",
-                "System.Reflection": "4.1.0-rc2-24027"
+                "NETStandard.Library": "1.6.0",
+                "System.Diagnostics.TraceSource": "4.0.0",
+                "System.Reflection": "4.1.0"
             }
         }
     },
     "buildOptions": {
         "xmlDoc": true,
         "defines": [ "DEBUG" ],
-        "optimize": false
+        "optimize": false,
+        "debugType": "portable"
     }
 }
